--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
       </header>
 
       <img
-        src="/Teju.jpeg"
+        src="https://res.cloudinary.com/dgmftp80m/image/upload/v1764317283/Teju_qjeljx.jpg"
         alt="Birthday Boy Twijilang Tripura"
         class="birthday-photo"
       />
